--- a/c.html
+++ b/c.html
@@ -1,12 +1,16 @@
 <html>
     <head>
-        <title> link</title>
+        <title> 캡틴아메리카 버젼</title>
     </head>
     <body>
-        이름 : 김민호<br />
-        생년월일 : 1992년 3월 29일<br />
-        사는 곳 : 경기도 수원시<br />
-        형액형 : 최신형<br />
+        이름 : <b>김민호</b> <br />
+        <br />
+        생년월일 : <b>1992년 3월 29일</b> <br />
+        <br />
+        사는 곳 : <b>경기도 수원시</b> <br />
+        <br />
+        혈액형 : <b>케이형</b> <br />
+        <br />
         <img src="shield.jpg"
              height="70%" />
     </body>
